--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "10.4.5",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  
-"overrides": {
-  "autoprefixer": "10.4.5"
-},
-  
+  "overrides": {
+    "autoprefixer": "10.4.5"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -42,6 +42,4 @@
       "last 1 safari version"
     ]
   }
-  
-  
 }
